# verl-vla

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  README_LANCEL.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.agents/skills/commit/: SKILL.md
.agents/skills/commit/agents/: openai.yaml
.agents/skills/pr/: SKILL.md
.agents/skills/pr/agents/: openai.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-pr-title.yml  pre-commit.yml  sanity.yml
assets/hf_models/recap_value_critic/: config.json  configuration_recap_value_critic.py  modeling_recap_value_critic.py
docker/: Dockerfile.gr00t  Dockerfile.pi0
docs/fine-tuning/: pi0-sft.md
examples/act_sac/: run_act_libero_sac.sh
examples/act_sft/: act_sft.yaml  run_act_libero_sft.sh
examples/dagger/: run_libero_keyboard_dagger.sh
examples/gr00t_arena_dsrl/: README.md  run_gr00t_arena_dsrl.sh
examples/gr00t_arena_sac/: README.md  run_docker.sh  run_gr00t_arena_eval.sh  run_gr00t_arena_sac.sh
examples/gr00t_sft/: README.md  main_gr00t_sft.yaml  run_gr00t_lerobot_sft.sh  run_gr00t_libero_eval.sh  validate_community_checkpoint.sh
examples/lerobot_sac/: run_pi05_lerobot_sac_disagg.sh
examples/lerobot_sft/: run_pi05_lerobot_sft.sh
examples/libero_recap/: run_pi05_libero_recap.sh
examples/libero_sac/: run_pi05_libero_sac.sh  run_pi05_libero_sac_disagg.sh  run_pi05_libero_sac_disagg_separated.sh  run_pi05_libero_sac_separated.sh
examples/record/: run_libero_gamepad_record.sh  run_libero_keyboard_record.sh  run_libero_xr_controller_record.sh
scripts/: build_gr00t_torch_checkpoint.py  check_commit_message.py  check_gr00t_n1d6_install.py  check_pr_title.py  compute_gr00t_libero_norm_stats.py  compute_norm_stats.py  merge_gr00t_fsdp_checkpoint.py  prepare_libero_dataset.py  record_data.py  upload_lerobot_dataset.py
src/verl_vla/: __init__.py  version.py
src/verl_vla/entrypoints/: __init__.py  dagger.py  eval.py  main_dagger.py  main_record.py  main_teleop.py  record.py  teleop.py
src/verl_vla/entrypoints/config/: __init__.py  main_dagger.yaml  main_record.yaml  main_teleop.yaml
src/verl_vla/entrypoints/train/: ppo.py  recap.py  sac.py  sft.py
src/verl_vla/env_loop/: env_loop.py
src/verl_vla/envs/: base.py
src/verl_vla/envs/arena/: __init__.py  arena_env.py  config.py  utils.py
src/verl_vla/envs/arena_env/: __init__.py  arena_env.py  config.py
src/verl_vla/envs/isaac/: isaac_env.py
src/verl_vla/envs/isaac_env/: isaac_env.py
src/verl_vla/envs/lerobot/: __init__.py  ipc_channel.py  lerobot_env.py  lerobot_runtime.py
src/verl_vla/envs/libero/: __init__.py  config.py  libero_env.py
src/verl_vla/envs/libero_env/: __init__.py  config.py  libero_env.py
src/verl_vla/models/: base.py  builder.py  register_vla_models.py
src/verl_vla/models/act_torch/: __init__.py  act_utils.py  adapter_config.py  configuration_act_torch.py  modeling_act_torch.py  trainable_model.py
src/verl_vla/models/dsrl/: __init__.py  config.py  mixin.py  noise_actor.py
src/verl_vla/models/gr00t_n1d6/: __init__.py  adapter_config.py  modeling_gr00t_n1d6.py  trainable_model.py
src/verl_vla/models/gr00t_torch/: __init__.py  configuration_gr00t_torch.py  gr00t_utils.py  modeling_gr00t_torch.py
src/verl_vla/models/openvla_oft/: trainable_model.py
src/verl_vla/models/pi0_torch/: adapter_config.py  configuration_pi0_torch.py  modeling_pi0_torch.py  trainable_model.py
src/verl_vla/recorder/: __init__.py  async_recorder.py  base.py  collection.py  config.py  dataset.py  lerobot.py  output.py  recorder.py  tar.py
src/verl_vla/recorder/impl/: lerobot.py  video.py
src/verl_vla/recorder/strategies/: __init__.py  arena.py  base.py  libero.py  registry.py
src/verl_vla/teleop/: __init__.py  config.py  teleop_controller.py
src/verl_vla/teleop/devices/: __init__.py  device_base.py  gamepad.py  keyboard.py  lerobot.py  xr_controller.py
src/verl_vla/teleop/obs_server/: server.py  teleop_server.py
src/verl_vla/teleop/strategies/: __init__.py  base.py  gamepad_libero.py  keyboard_libero.py  registry.py  xr_controller_libero.py
src/verl_vla/train_cluster/: __init__.py  checkpoint.py  cluster.py  config.py  env_loop.py  resource_pool.py
src/verl_vla/trainer/: __init__.py  main_ppo.py  main_recap.py  main_sac.py  main_sft.py
src/verl_vla/trainer/config/: __init__.py  main_gr00t_eval.yaml  main_gr00t_sft.yaml  main_recap.yaml  rob_ppo_trainer.yaml  rob_recap_trainer.yaml  rob_sac_trainer.yaml  rob_sft_trainer.yaml
src/verl_vla/trainer/engine/: fsdp_workers.py
src/verl_vla/trainer/ppo/: __init__.py  dp_rob.py  rob_ray_trainer.py
src/verl_vla/trainer/recap/: __init__.py  collect_data.py  compute_return.py  config.py  policy_eval.py  value_infer.py
src/verl_vla/trainer/sac/: __init__.py  config.py  episode_buffer.py  sac_ray_trainer.py  sac_separate_trainer.py
src/verl_vla/trainer/sft/: __init__.py  base.py  config.py  sft_ray_trainer.py
src/verl_vla/utils/: data.py  image.py  keys.py  lerobot.py  random.py  ray_utils.py  replay_pool.py  rlpd.py  rollout_collection.py  scalar_schedule.py
src/verl_vla/workers/: __init__.py
src/verl_vla/workflows/: dagger.py  eval.py  record.py  teleop.py
tests/: README.md
tests/envs/: test_base_env_teleop_recording.py  test_recorder_mode.py
tests/models/: test_dsrl_noise_actor.py  test_gr00t_n1d6_data.py  test_lora.py
tests/special_sanity/: check_license.py  check_pr_description.py  test_check_commit_message.py  test_check_pr_description.py  test_check_pr_title.py  test_import.py  validate_structure.py
tests/teleop/: test_record_control.py
tests/train_cluster/: test_trajectory_records.py
tests/trainer/: test_prepare_actor_input.py
tests/trainer/recap/: test_value_infer_advantage.py
tests/trainer/train_cluster/: test_trajectory_records.py
tests/utils/: test_progress_counts.py  test_rollout_collection.py
tests/workers/rollout/: conftest.py  test_sample_transfer.py  test_weight_sync.py
tests/workflows/: test_configs.py  test_sft_entrypoint.py
(+178 files in other folders)
